Tests/invalidity_tests/build_maze_enhanced/dimensions_negative_integer_overflow.expout

Welcome to MineCraft MazeRunner!
--------------------------------

------------- MAIN MENU -------------
1) Generate Maze
2) Build Maze in MineCraft
3) Solve Maze
4) Show Team Information
5) Exit

Enter Menu item to continue:

------------- GENERATE MAZE -------------
1) Read Maze from terminal
2) Generate Random Maze
3) Generate Random Maze without modifying terrain (Enhancements)
4) Back

Enter Menu item to continue:
Enter the basePoint of the maze:
Enter the length and width of the maze:
Integer is too large or small for length, try entering a different integer.
Enter the length and width of the maze:
Integer is too large or small for width, try entering a different integer.
Enter the length and width of the maze:
Length and width set to:
3 3
Reading terrain
Maze generated
**Printing Maze**
BasePoint: (140, 71, 161)
Structure:
xxx
..x
xxx
**End Printing Maze**

------------- GENERATE MAZE -------------
1) Read Maze from terminal
2) Generate Random Maze
3) Generate Random Maze without modifying terrain (Enhancements)
4) Back

Enter Menu item to continue:
Returning to menu...

------------- MAIN MENU -------------
1) Generate Maze
2) Build Maze in MineCraft
3) Solve Maze
4) Show Team Information
5) Exit

Enter Menu item to continue:

Exiting...

The End!

